--- a/full stack/index.html
+++ b/full stack/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\meenu verma\OneDrive\Desktop\training\full stack\style8.css ">
+    <link rel="stylesheet" href="style8.css ">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />  
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" /> -->
@@ -68,7 +68,7 @@
 
             </div>
             <div class="bannerRight">
-                <img  class="bannerimage"src="C:\Users\meenu verma\Downloads\photo.jpg" alt="">
+                <img  class="bannerimage"src="photo.png" alt="">
             </div>
         </div>
 
